# Reinforcement-Learning

./: .gitignore  .gitmodules  02_pytorch_classification_exercises.ipynb  pyproject.toml
lab1/: Bandycki_Streaming_Nicolas_Stupak.docx  bandits.py  non_stationary_bandits.py  requirements.txt  test_bandits.py  test_non_stationary_bandits.py
lab2/zakrety/: problem.py  solution.py  utils.py
lab2/zakrety/plgrid/: aggregate_results.py  script.sbatch  train.py
lab3/: isolation.py  mcts_experiment_results.pkl  visualize_experiment_results.py
lab4/: co_zrobic_zeby_dzialalo_na_colabie.txt
lab4/ladownik/: evaluate_states.py  solution.py  visualize_model_episodes.py
lab4/ladownik/models/: actor_critic_model.pth  cart_pole_separate_layers.pth  cart_pole_separate_layers_less_neurons.pth  cart_pole_separate_layers_less_neurons_higher_lr.pth  lunarLander.pth  lunarLanderV2.pth  lunarLanderV3.pth  lunarLanderV3_uplearning.pth
lab5/: grpo.py  questions.txt  test.py
lab5/answers/: gpt2_answers.txt  grpo_20_answers.txt  grpo_220_answers.txt  grpo_220_b03_lr05_mcl50_crf_answers.txt  grpo_220_b05_answers.txt  grpo_220_b05_lr04_mcl70_crf_answers.txt  grpo_220_gas3_answers.txt  grpo_220_lr03_answers.txt  grpo_220_lr05_answers.txt  grpo_220_mcl50_answers.txt
lab6/sac+her/: test.py  train.py
lab6/sac+her/asdf/: algos.py  buffers.py
lab6/sac+her/models/: panda_reach_auto_a.pth
lab6/sac+her/runs/Jun07_23-04-36_Nicolass-MacBook-Pro.local/: events.out.tfevents.1749330276.Nicolass-MacBook-Pro.local.78996.0
(+6 files in other folders)
