[project]
name = "reinforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cycler>=0.12.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy==1.23.5",
    "packaging>=25.0",
    "pillow>=11.2.1",
    "pyparsing>=3.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "threadpoolctl>=3.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[flake8]
max-line-length = 88
[style]
column_limit = 79
