[project]
name = "reinforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "box2d>=2.3.10",
    "cycler>=0.12.1",
    "datasets>=2.19.2",
    "gymnasium==0.29.1",
    "joblib>=1.4.2",
    "matplotlib==3.8.2",
    "numpy==1.23.5",
    "packaging>=25.0",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "pyparsing>=3.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tensorflow==2.15.0",
    "tensorflow-probability==0.23.0",
    "threadpoolctl>=3.6.0",
    "torch>=2.7.0",
    "tqdm==4.66.1",
    "transformers>=4.52.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[flake8]
max-line-length = 88
[style]
column_limit = 79
